2002-02-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/gadgets.h src/gadgets.c src/plot2d.c
	src/plot3d.c src/save.c src/set.c src/show.c src/tables.h src/tables.c
	src/unset.c: New option 'set key {no}enhanced'.

	* term/post.trm: Add label "?enhanced postscript".

2002-02-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Remove warning that pm3d works on some terminals
	only.

	* docs/gnuplot.doc: Minor fixes.

2002-02-01 Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/hidden3d.c (draw_line_hidden): Changed local variables
 	vstore1 and vstore2 from pointers to indices, to avoid yet another
 	dangling pointer problem caused by realloc() happening at a time I
 	hadn't expected.

2002-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/README: Corrected type of last argument of term->arrow()
	Re-indented a bit.
	
2001-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/pgnuplot.c: Added comment about -mno-cygwin option to be
 	used to avoid GPLification of pgnuplot by use of Cygwin's DLL.

	* config/makefile.cyg (pgnuplot.exe): Added rule to build the
 	helper program.
	(default, all): Added dependencies on pgnuplot.exe.
	(install): Added command to install pgnuplot.exe, too.

	* config/makefile.mgw (install): Also install pgnuplot.exe.

2002-01-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/all.dem demo/pm3d.dem demo/clip14in.dat demo/triangle.dat:
 	New files for pm3d demo.

	* pm3d/demo: Directory removed (contents merged with demo/).

2002-01-31  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* src/contour.c(chk_contour_kind): Remove unnecessary FPRINTF
	statements.

	* src/gplt_x11.c, term/x11.trm: Cleaning up, indentation, ANSIfication.

	* src/plot.c(main): Fix two minor bugs which only show if neither
	atexit() nor on_exit() are available.

	* src/util.c(os_error): Replace fprintf errno with perror().

2002-01-30  Petr Mikulik  <mikulik@physics.muni.cz>
